--- a/estilo.css
+++ b/estilo.css
@@ -25,3 +25,12 @@ width:100%;
    padding: 10px;
 
 }
+input{width:400px; height:50px}
+
+ .btn-primary{width: 400px;
+height: 40px;
+background-color: red;
+margin: 30px;
+justify-content: center;
+display: flex;
+border-radius: 10px;}
