--- a/estilo.css
+++ b/estilo.css
@@ -25,12 +25,15 @@ width:100%;
    padding: 10px;
 
 }
-input{width:400px; height:50px}
+input{width:420px; height:50px}
 
  .btn-primary{width: 400px;
-height: 40px;
+height: 60px;
 background-color: red;
-margin: 30px;
+margin: 18px;
+padding: 3%;
+padding-right:5% ;
 justify-content: center;
 display: flex;
+align-items: center;
 border-radius: 10px;}
